# django_build

./: .flake8  .gitignore  README.md  buildout.cfg  install_build.sh  pyproject.toml
WEB_SERVE/: manage.py
WEB_SERVE/WEB_SERVE/: settings.py  urls.py  wsgi.py
configurations/: config.ini
core/: __init__.py  urls.py  views.py
core/utils/: __init__.py
