[tool.poetry]
name = "PYTHON_PACKAGE_MANAGER"
version = "0.1.0"
description = ""
authors = ["Siva Cn <cnsiva@protonmail.com>"]

[tool.poetry.dependencies]
python = "3.8.13"

"zc.buildout" = "2.13.3"
"zc.recipe.egg" = "2.0.7"
"buildout_script" = "0.3.1"
"collective.recipe.template" = "2.2"
"osc.recipe.sysegg" = "0.1.2"

django = "2.2.5"
djangorecipe = "2.2.1"
django-configurations = "2.2"
django-cors-headers = "3.2.1"
djangorestframework = "3.11.0"

gunicorn = "19.9.0"

jsonschema = "3.2.0"
python-dateutil = "2.8.1"
pytz = "2021.3"
requests = "2.24.0"
requests-toolbelt = "0.8.0"
simplejson = "3.17.0"

[tool.poetry.dev-dependencies]
pytest = "7.1.2"


[build-system]
requires = ["poetry>=1.1.0"]
build-backend = "poetry.masonry.api"
